fix menu z-index

--- a/src/components/header-profile/styles.module.scss
+++ b/src/components/header-profile/styles.module.scss
@@ -19,10 +19,10 @@
   }
 }
 
-// .menuActive {}
-
 .headerProfileInner {
   padding: 16px;
+  z-index: 999;
+  border-radius: 4px;
 
   .menuActive & {
     box-shadow: 0px 10px 24px rgba(23, 42, 63, 0.1);
